--- a/src/App.css
+++ b/src/App.css
@@ -5,19 +5,6 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -33,24 +20,37 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
 
 .list {
-  font-size: 14px;
+  font-size: 16px;
+  text-align: left;
 }
 
 .conteiner {
-  width: 400px;
-  height: 500px;
-  background-color: bisque;
+  width: 700px;
+  min-height: 400px;
+  background-color: rgb(126, 119, 111);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .buttons {
-  color: blueviolet;
+  display: flex;
+  justify-content: space-around;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin: 20px;
+}
+
+.inputForm {
+  padding: 0.8em 1.2em;
+  border-radius: 8px;
+  display: block;
+  width: 100%;
 }
